// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search bar components renders date picker 1`] = `
<EuiSuperDatePicker
  commonlyUsedRanges={
    Array [
      Object {
        "end": "now/d",
        "label": "Today",
        "start": "now/d",
      },
      Object {
        "end": "now/w",
        "label": "This week",
        "start": "now/w",
      },
      Object {
        "end": "now/M",
        "label": "This month",
        "start": "now/M",
      },
      Object {
        "end": "now/y",
        "label": "This year",
        "start": "now/y",
      },
      Object {
        "end": "now-1d/d",
        "label": "Yesterday",
        "start": "now-1d/d",
      },
      Object {
        "end": "now",
        "label": "Week to date",
        "start": "now/w",
      },
      Object {
        "end": "now",
        "label": "Month to date",
        "start": "now/M",
      },
      Object {
        "end": "now",
        "label": "Year to date",
        "start": "now/y",
      },
    ]
  }
  compressed={true}
  dateFormat=""
  end="now"
  isAutoRefreshOnly={false}
  isDisabled={false}
  isPaused={true}
  onTimeChange={[Function]}
  recentlyUsedRanges={Array []}
  refreshInterval={0}
  showUpdateButton={false}
  start="now-5m"
  timeFormat="HH:mm"
>
  <EuiFlexGroup
    className="euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    gutterSize="s"
    responsive={false}
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <EuiFlexItem>
        <div
          className="euiFlexItem"
        >
          <EuiFormControlLayout
            className="euiSuperDatePicker"
            compressed={true}
            isDisabled={false}
            prepend={
              <EuiQuickSelectPopover
                applyTime={[Function]}
                commonlyUsedRanges={
                  Array [
                    Object {
                      "end": "now/d",
                      "label": "Today",
                      "start": "now/d",
                    },
                    Object {
                      "end": "now/w",
                      "label": "This week",
                      "start": "now/w",
                    },
                    Object {
                      "end": "now/M",
                      "label": "This month",
                      "start": "now/M",
                    },
                    Object {
                      "end": "now/y",
                      "label": "This year",
                      "start": "now/y",
                    },
                    Object {
                      "end": "now-1d/d",
                      "label": "Yesterday",
                      "start": "now-1d/d",
                    },
                    Object {
                      "end": "now",
                      "label": "Week to date",
                      "start": "now/w",
                    },
                    Object {
                      "end": "now",
                      "label": "Month to date",
                      "start": "now/M",
                    },
                    Object {
                      "end": "now",
                      "label": "Year to date",
                      "start": "now/y",
                    },
                  ]
                }
                dateFormat=""
                end="now"
                isAutoRefreshOnly={false}
                isDisabled={false}
                isPaused={true}
                recentlyUsedRanges={Array []}
                refreshInterval={0}
                start="now-5m"
              />
            }
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed euiFormControlLayout--group euiSuperDatePicker"
            >
              <EuiQuickSelectPopover
                applyTime={[Function]}
                className="euiFormControlLayout__prepend"
                commonlyUsedRanges={
                  Array [
                    Object {
                      "end": "now/d",
                      "label": "Today",
                      "start": "now/d",
                    },
                    Object {
                      "end": "now/w",
                      "label": "This week",
                      "start": "now/w",
                    },
                    Object {
                      "end": "now/M",
                      "label": "This month",
                      "start": "now/M",
                    },
                    Object {
                      "end": "now/y",
                      "label": "This year",
                      "start": "now/y",
                    },
                    Object {
                      "end": "now-1d/d",
                      "label": "Yesterday",
                      "start": "now-1d/d",
                    },
                    Object {
                      "end": "now",
                      "label": "Week to date",
                      "start": "now/w",
                    },
                    Object {
                      "end": "now",
                      "label": "Month to date",
                      "start": "now/M",
                    },
                    Object {
                      "end": "now",
                      "label": "Year to date",
                      "start": "now/y",
                    },
                  ]
                }
                dateFormat=""
                end="now"
                isAutoRefreshOnly={false}
                isDisabled={false}
                isPaused={true}
                key="0/.0"
                recentlyUsedRanges={Array []}
                refreshInterval={0}
                start="now-5m"
              >
                <EuiPopover
                  anchorClassName="euiQuickSelectPopover__anchor"
                  anchorPosition="downLeft"
                  button={
                    <EuiButtonEmpty
                      aria-label="Date quick select"
                      className="euiFormControlLayout__prepend"
                      data-test-subj="superDatePickerToggleQuickMenuButton"
                      iconSide="right"
                      iconType="arrowDown"
                      isDisabled={false}
                      onClick={[Function]}
                      size="xs"
                      textProps={
                        Object {
                          "className": "euiQuickSelectPopover__buttonText",
                        }
                      }
                    >
                      <EuiIcon
                        type="calendar"
                      />
                    </EuiButtonEmpty>
                  }
                  closePopover={[Function]}
                  display="inlineBlock"
                  hasArrow={true}
                  isOpen={false}
                  ownFocus={true}
                  panelPaddingSize="s"
                >
                  <div
                    className="euiPopover euiPopover--anchorDownLeft"
                  >
                    <div
                      className="euiPopover__anchor euiQuickSelectPopover__anchor"
                    >
                      <EuiButtonEmpty
                        aria-label="Date quick select"
                        className="euiFormControlLayout__prepend"
                        data-test-subj="superDatePickerToggleQuickMenuButton"
                        iconSide="right"
                        iconType="arrowDown"
                        isDisabled={false}
                        onClick={[Function]}
                        size="xs"
                        textProps={
                          Object {
                            "className": "euiQuickSelectPopover__buttonText",
                          }
                        }
                      >
                        <button
                          aria-label="Date quick select"
                          className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                          data-test-subj="superDatePickerToggleQuickMenuButton"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          <EuiButtonContent
                            className="euiButtonEmpty__content"
                            iconGap="m"
                            iconSide="right"
                            iconSize="s"
                            iconType="arrowDown"
                            textProps={
                              Object {
                                "className": "euiButtonEmpty__text euiQuickSelectPopover__buttonText",
                              }
                            }
                          >
                            <span
                              className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                            >
                              <EuiIcon
                                className="euiButtonContent__icon"
                                color="inherit"
                                size="s"
                                type="arrowDown"
                              >
                                <EuiIconBeaker
                                  aria-hidden={true}
                                  className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                  focusable="false"
                                  role="img"
                                  style={null}
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                    focusable="false"
                                    height={16}
                                    role="img"
                                    style={null}
                                    viewBox="0 0 16 16"
                                    width={16}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                    />
                                  </svg>
                                </EuiIconBeaker>
                              </EuiIcon>
                              <span
                                className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                              >
                                <EuiIcon
                                  type="calendar"
                                >
                                  <EuiIconBeaker
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--medium euiIcon-isLoading"
                                    focusable="false"
                                    role="img"
                                    style={null}
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon-isLoading"
                                      focusable="false"
                                      height={16}
                                      role="img"
                                      style={null}
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                      />
                                    </svg>
                                  </EuiIconBeaker>
                                </EuiIcon>
                              </span>
                            </span>
                          </EuiButtonContent>
                        </button>
                      </EuiButtonEmpty>
                    </div>
                  </div>
                </EuiPopover>
              </EuiQuickSelectPopover>
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <EuiDatePickerRange
                  className="euiDatePickerRange--inGroup"
                  endDateControl={<div />}
                  iconType={false}
                  isCustom={true}
                  startDateControl={<div />}
                >
                  <div
                    className="euiDatePickerRange euiDatePickerRange--inGroup"
                  >
                    <button
                      className="euiSuperDatePicker__prettyFormat euiSuperDatePicker__prettyFormat--compressed"
                      data-test-subj="superDatePickerShowDatesButton"
                      disabled={false}
                      onClick={[Function]}
                    >
                      Last 5 minutes
                      <span
                        className="euiSuperDatePicker__prettyFormatLink"
                      >
                        <EuiI18n
                          default="Show dates"
                          token="euiSuperDatePicker.showDatesButtonLabel"
                        >
                          Show dates
                        </EuiI18n>
                      </span>
                    </button>
                  </div>
                </EuiDatePickerRange>
                <EuiFormControlLayoutIcons
                  compressed={true}
                />
              </div>
            </div>
          </EuiFormControlLayout>
        </div>
      </EuiFlexItem>
    </div>
  </EuiFlexGroup>
</EuiSuperDatePicker>
`;

exports[`Search bar components renders search bar 1`] = `
<ForwardRef
  appConfigs={Array []}
  attributesFilterFields={Array []}
  endTime="now"
  filters={Array []}
  mode="data_prepper"
  page="dashboard"
  query="test"
  refresh={[MockFunction]}
  setEndTime={[MockFunction]}
  setFilters={[MockFunction]}
  setQuery={[MockFunction]}
  setStartTime={[MockFunction]}
  startTime="now-5m"
>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <EuiFlexItem>
        <div
          className="euiFlexItem"
        >
          <EuiCompressedFieldSearch
            compressed={true}
            data-test-subj="search-bar-input-box"
            fullWidth={true}
            incremental={false}
            isClearable={false}
            isLoading={false}
            onChange={[Function]}
            onSearch={[Function]}
            placeholder="Trace Id, trace group name, service name"
            prepend={
              <GlobalFilterButton
                attributesFilterFields={Array []}
                filters={Array []}
                mode="data_prepper"
                page="dashboard"
                setFilters={[MockFunction]}
              />
            }
            value="test"
          >
            <EuiFormControlLayout
              compressed={true}
              fullWidth={true}
              icon="search"
              isLoading={false}
              prepend={
                <GlobalFilterButton
                  attributesFilterFields={Array []}
                  filters={Array []}
                  mode="data_prepper"
                  page="dashboard"
                  setFilters={[MockFunction]}
                />
              }
            >
              <div
                className="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed euiFormControlLayout--group"
              >
                <GlobalFilterButton
                  attributesFilterFields={Array []}
                  className="euiFormControlLayout__prepend"
                  filters={Array []}
                  key="0/.0"
                  mode="data_prepper"
                  page="dashboard"
                  setFilters={[MockFunction]}
                >
                  <EuiPopover
                    anchorPosition="downLeft"
                    button={
                      <EuiButtonEmpty
                        iconType="filter"
                        onClick={[Function]}
                        size="s"
                      >
                        <EuiIcon
                          type="arrowDown"
                        />
                      </EuiButtonEmpty>
                    }
                    closePopover={[Function]}
                    data-test-subj="global-filter-button"
                    display="inlineBlock"
                    hasArrow={true}
                    isOpen={false}
                    ownFocus={true}
                    panelPaddingSize="none"
                  >
                    <div
                      className="euiPopover euiPopover--anchorDownLeft"
                      data-test-subj="global-filter-button"
                    >
                      <div
                        className="euiPopover__anchor"
                      >
                        <EuiButtonEmpty
                          iconType="filter"
                          onClick={[Function]}
                          size="s"
                        >
                          <button
                            className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            <EuiButtonContent
                              className="euiButtonEmpty__content"
                              iconGap="m"
                              iconSide="left"
                              iconSize="m"
                              iconType="filter"
                              textProps={
                                Object {
                                  "className": "euiButtonEmpty__text",
                                }
                              }
                            >
                              <span
                                className="euiButtonContent euiButtonEmpty__content"
                              >
                                <EuiIcon
                                  className="euiButtonContent__icon"
                                  color="inherit"
                                  size="m"
                                  type="filter"
                                >
                                  <EuiIconBeaker
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                    focusable="false"
                                    role="img"
                                    style={null}
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                      focusable="false"
                                      height={16}
                                      role="img"
                                      style={null}
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                      />
                                    </svg>
                                  </EuiIconBeaker>
                                </EuiIcon>
                                <span
                                  className="euiButtonEmpty__text"
                                >
                                  <EuiIcon
                                    type="arrowDown"
                                  >
                                    <EuiIconArrowDown
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium"
                                      focusable="false"
                                      role="img"
                                      style={null}
                                    >
                                      <svg
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--medium"
                                        focusable="false"
                                        height={16}
                                        role="img"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                          fillRule="non-zero"
                                        />
                                      </svg>
                                    </EuiIconArrowDown>
                                  </EuiIcon>
                                </span>
                              </span>
                            </EuiButtonContent>
                          </button>
                        </EuiButtonEmpty>
                      </div>
                    </div>
                  </EuiPopover>
                </GlobalFilterButton>
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiValidatableControl>
                    <input
                      className="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed euiFieldSearch--inGroup"
                      data-test-subj="search-bar-input-box"
                      onChange={[Function]}
                      onKeyUp={[Function]}
                      placeholder="Trace Id, trace group name, service name"
                      type="search"
                      value="test"
                    />
                  </EuiValidatableControl>
                  <EuiFormControlLayoutIcons
                    compressed={true}
                    icon="search"
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayoutIcons"
                    >
                      <EuiFormControlLayoutCustomIcon
                        size="s"
                        type="search"
                      >
                        <span
                          className="euiFormControlLayoutCustomIcon"
                        >
                          <EuiIcon
                            aria-hidden="true"
                            className="euiFormControlLayoutCustomIcon__icon"
                            size="s"
                            type="search"
                          >
                            <EuiIconBeaker
                              aria-hidden={true}
                              className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              role="img"
                              style={null}
                            >
                              <svg
                                aria-hidden={true}
                                className="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height={16}
                                role="img"
                                style={null}
                                viewBox="0 0 16 16"
                                width={16}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                />
                              </svg>
                            </EuiIconBeaker>
                          </EuiIcon>
                        </span>
                      </EuiFormControlLayoutCustomIcon>
                    </div>
                  </EuiFormControlLayoutIcons>
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiCompressedFieldSearch>
        </div>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
        style={
          Object {
            "maxWidth": "30vw",
          }
        }
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
          style={
            Object {
              "maxWidth": "30vw",
            }
          }
        >
          <EuiSuperDatePicker
            commonlyUsedRanges={
              Array [
                Object {
                  "end": "now/d",
                  "label": "Today",
                  "start": "now/d",
                },
                Object {
                  "end": "now/w",
                  "label": "This week",
                  "start": "now/w",
                },
                Object {
                  "end": "now/M",
                  "label": "This month",
                  "start": "now/M",
                },
                Object {
                  "end": "now/y",
                  "label": "This year",
                  "start": "now/y",
                },
                Object {
                  "end": "now-1d/d",
                  "label": "Yesterday",
                  "start": "now-1d/d",
                },
                Object {
                  "end": "now",
                  "label": "Week to date",
                  "start": "now/w",
                },
                Object {
                  "end": "now",
                  "label": "Month to date",
                  "start": "now/M",
                },
                Object {
                  "end": "now",
                  "label": "Year to date",
                  "start": "now/y",
                },
              ]
            }
            compressed={true}
            dateFormat="MMM D, YYYY @ HH:mm:ss.SSS"
            end="now"
            isAutoRefreshOnly={false}
            isDisabled={false}
            isPaused={true}
            onTimeChange={[Function]}
            recentlyUsedRanges={Array []}
            refreshInterval={0}
            showUpdateButton={false}
            start="now-5m"
            timeFormat="HH:mm"
          >
            <EuiFlexGroup
              className="euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
              gutterSize="s"
              responsive={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
              >
                <EuiFlexItem>
                  <div
                    className="euiFlexItem"
                  >
                    <EuiFormControlLayout
                      className="euiSuperDatePicker"
                      compressed={true}
                      isDisabled={false}
                      prepend={
                        <EuiQuickSelectPopover
                          applyTime={[Function]}
                          commonlyUsedRanges={
                            Array [
                              Object {
                                "end": "now/d",
                                "label": "Today",
                                "start": "now/d",
                              },
                              Object {
                                "end": "now/w",
                                "label": "This week",
                                "start": "now/w",
                              },
                              Object {
                                "end": "now/M",
                                "label": "This month",
                                "start": "now/M",
                              },
                              Object {
                                "end": "now/y",
                                "label": "This year",
                                "start": "now/y",
                              },
                              Object {
                                "end": "now-1d/d",
                                "label": "Yesterday",
                                "start": "now-1d/d",
                              },
                              Object {
                                "end": "now",
                                "label": "Week to date",
                                "start": "now/w",
                              },
                              Object {
                                "end": "now",
                                "label": "Month to date",
                                "start": "now/M",
                              },
                              Object {
                                "end": "now",
                                "label": "Year to date",
                                "start": "now/y",
                              },
                            ]
                          }
                          dateFormat="MMM D, YYYY @ HH:mm:ss.SSS"
                          end="now"
                          isAutoRefreshOnly={false}
                          isDisabled={false}
                          isPaused={true}
                          recentlyUsedRanges={Array []}
                          refreshInterval={0}
                          start="now-5m"
                        />
                      }
                    >
                      <div
                        className="euiFormControlLayout euiFormControlLayout--compressed euiFormControlLayout--group euiSuperDatePicker"
                      >
                        <EuiQuickSelectPopover
                          applyTime={[Function]}
                          className="euiFormControlLayout__prepend"
                          commonlyUsedRanges={
                            Array [
                              Object {
                                "end": "now/d",
                                "label": "Today",
                                "start": "now/d",
                              },
                              Object {
                                "end": "now/w",
                                "label": "This week",
                                "start": "now/w",
                              },
                              Object {
                                "end": "now/M",
                                "label": "This month",
                                "start": "now/M",
                              },
                              Object {
                                "end": "now/y",
                                "label": "This year",
                                "start": "now/y",
                              },
                              Object {
                                "end": "now-1d/d",
                                "label": "Yesterday",
                                "start": "now-1d/d",
                              },
                              Object {
                                "end": "now",
                                "label": "Week to date",
                                "start": "now/w",
                              },
                              Object {
                                "end": "now",
                                "label": "Month to date",
                                "start": "now/M",
                              },
                              Object {
                                "end": "now",
                                "label": "Year to date",
                                "start": "now/y",
                              },
                            ]
                          }
                          dateFormat="MMM D, YYYY @ HH:mm:ss.SSS"
                          end="now"
                          isAutoRefreshOnly={false}
                          isDisabled={false}
                          isPaused={true}
                          key="0/.0"
                          recentlyUsedRanges={Array []}
                          refreshInterval={0}
                          start="now-5m"
                        >
                          <EuiPopover
                            anchorClassName="euiQuickSelectPopover__anchor"
                            anchorPosition="downLeft"
                            button={
                              <EuiButtonEmpty
                                aria-label="Date quick select"
                                className="euiFormControlLayout__prepend"
                                data-test-subj="superDatePickerToggleQuickMenuButton"
                                iconSide="right"
                                iconType="arrowDown"
                                isDisabled={false}
                                onClick={[Function]}
                                size="xs"
                                textProps={
                                  Object {
                                    "className": "euiQuickSelectPopover__buttonText",
                                  }
                                }
                              >
                                <EuiIcon
                                  type="calendar"
                                />
                              </EuiButtonEmpty>
                            }
                            closePopover={[Function]}
                            display="inlineBlock"
                            hasArrow={true}
                            isOpen={false}
                            ownFocus={true}
                            panelPaddingSize="s"
                          >
                            <div
                              className="euiPopover euiPopover--anchorDownLeft"
                            >
                              <div
                                className="euiPopover__anchor euiQuickSelectPopover__anchor"
                              >
                                <EuiButtonEmpty
                                  aria-label="Date quick select"
                                  className="euiFormControlLayout__prepend"
                                  data-test-subj="superDatePickerToggleQuickMenuButton"
                                  iconSide="right"
                                  iconType="arrowDown"
                                  isDisabled={false}
                                  onClick={[Function]}
                                  size="xs"
                                  textProps={
                                    Object {
                                      "className": "euiQuickSelectPopover__buttonText",
                                    }
                                  }
                                >
                                  <button
                                    aria-label="Date quick select"
                                    className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                                    data-test-subj="superDatePickerToggleQuickMenuButton"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <EuiButtonContent
                                      className="euiButtonEmpty__content"
                                      iconGap="m"
                                      iconSide="right"
                                      iconSize="s"
                                      iconType="arrowDown"
                                      textProps={
                                        Object {
                                          "className": "euiButtonEmpty__text euiQuickSelectPopover__buttonText",
                                        }
                                      }
                                    >
                                      <span
                                        className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                      >
                                        <EuiIcon
                                          className="euiButtonContent__icon"
                                          color="inherit"
                                          size="s"
                                          type="arrowDown"
                                        >
                                          <EuiIconArrowDown
                                            aria-hidden={true}
                                            className="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                                            focusable="false"
                                            role="img"
                                            style={null}
                                          >
                                            <svg
                                              aria-hidden={true}
                                              className="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                                              focusable="false"
                                              height={16}
                                              role="img"
                                              style={null}
                                              viewBox="0 0 16 16"
                                              width={16}
                                              xmlns="http://www.w3.org/2000/svg"
                                            >
                                              <path
                                                d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                                fillRule="non-zero"
                                              />
                                            </svg>
                                          </EuiIconArrowDown>
                                        </EuiIcon>
                                        <span
                                          className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                                        >
                                          <EuiIcon
                                            type="calendar"
                                          >
                                            <EuiIconCalendar
                                              aria-hidden={true}
                                              className="euiIcon euiIcon--medium"
                                              focusable="false"
                                              role="img"
                                              style={null}
                                            >
                                              <svg
                                                aria-hidden={true}
                                                className="euiIcon euiIcon--medium"
                                                focusable="false"
                                                height={16}
                                                role="img"
                                                style={null}
                                                viewBox="0 0 16 16"
                                                width={16}
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <path
                                                  d="M14 4v-.994C14 2.45 13.55 2 12.994 2H11v1h-1V2H6v1H5V2H3.006C2.45 2 2 2.45 2 3.006v9.988C2 13.55 2.45 14 3.006 14h9.988C13.55 14 14 13.55 14 12.994V5H2V4h12zm-3-3h1.994C14.102 1 15 1.897 15 3.006v9.988A2.005 2.005 0 0 1 12.994 15H3.006A2.005 2.005 0 0 1 1 12.994V3.006C1 1.898 1.897 1 3.006 1H5V0h1v1h4V0h1v1zM4 7h2v1H4V7zm3 0h2v1H7V7zm3 0h2v1h-2V7zM4 9h2v1H4V9zm3 0h2v1H7V9zm3 0h2v1h-2V9zm-6 2h2v1H4v-1zm3 0h2v1H7v-1zm3 0h2v1h-2v-1z"
                                                  fillRule="evenodd"
                                                />
                                              </svg>
                                            </EuiIconCalendar>
                                          </EuiIcon>
                                        </span>
                                      </span>
                                    </EuiButtonContent>
                                  </button>
                                </EuiButtonEmpty>
                              </div>
                            </div>
                          </EuiPopover>
                        </EuiQuickSelectPopover>
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <EuiDatePickerRange
                            className="euiDatePickerRange--inGroup"
                            endDateControl={<div />}
                            iconType={false}
                            isCustom={true}
                            startDateControl={<div />}
                          >
                            <div
                              className="euiDatePickerRange euiDatePickerRange--inGroup"
                            >
                              <button
                                className="euiSuperDatePicker__prettyFormat euiSuperDatePicker__prettyFormat--compressed"
                                data-test-subj="superDatePickerShowDatesButton"
                                disabled={false}
                                onClick={[Function]}
                              >
                                Last 5 minutes
                                <span
                                  className="euiSuperDatePicker__prettyFormatLink"
                                >
                                  <EuiI18n
                                    default="Show dates"
                                    token="euiSuperDatePicker.showDatesButtonLabel"
                                  >
                                    Show dates
                                  </EuiI18n>
                                </span>
                              </button>
                            </div>
                          </EuiDatePickerRange>
                          <EuiFormControlLayoutIcons
                            compressed={true}
                          />
                        </div>
                      </div>
                    </EuiFormControlLayout>
                  </div>
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </EuiSuperDatePicker>
        </div>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <EuiButtonIcon
            aria-label="Refresh"
            data-click-metric-element="trace_analytics.refresh_button"
            data-test-subj="superDatePickerApplyTimeButton"
            display="base"
            iconType="refresh"
            onClick={[Function]}
            size="s"
          >
            <button
              aria-label="Refresh"
              className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--small"
              data-click-metric-element="trace_analytics.refresh_button"
              data-test-subj="superDatePickerApplyTimeButton"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <EuiIcon
                aria-hidden="true"
                className="euiButtonIcon__icon"
                color="inherit"
                size="m"
                type="refresh"
              >
                <EuiIconBeaker
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                  focusable="false"
                  role="img"
                  style={null}
                >
                  <svg
                    aria-hidden={true}
                    className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                    focusable="false"
                    height={16}
                    role="img"
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </EuiIconBeaker>
              </EuiIcon>
            </button>
          </EuiButtonIcon>
        </div>
      </EuiFlexItem>
    </div>
  </EuiFlexGroup>
</ForwardRef>
`;
